Enable user profile service
