# deployment/api/cyclingstats-openapi.json
@@ -6,27 +6,15 @@
     "version": "1.0.0.0"
   },
   "paths": {
-    "/races": {
+    "/users": {
       "get": {
         "tags": [
-          "Race"
+          "Users"
         ],
-        "operationId": "Race_GetRaces",
-        "parameters": [
-          {
-            "name": "year",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "nullable": true
-            },
-            "x-position": 1
-          }
-        ],
+        "operationId": "Users_GetUsers",
         "responses": {
           "401": {
-            "description": "Not authorized to retrieve races.",
+            "description": "Not authorized to retrieve users.",
             "content": {
               "application/json": {
                 "schema": {
@@ -36,11 +24,11 @@
             }
           },
           "200": {
-            "description": "Race list.",
+            "description": "User list.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RaceListResponse"
+                  "$ref": "#/components/schemas/UserListResponse"
                 }
               }
             }
@@ -49,15 +37,15 @@
       },
       "post": {
         "tags": [
-          "Race"
+          "Users"
         ],
-        "operationId": "Race_UpdateRace",
+        "operationId": "Users_CreateUser",
         "requestBody": {
           "x-name": "request",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/RaceUpdateRequest"
+                "$ref": "#/components/schemas/CreateUserRequest"
               }
             }
           },
@@ -66,7 +54,7 @@
         },
         "responses": {
           "401": {
-            "description": "Not authorized to update race.",
+            "description": "Not authorized to create a user.",
             "content": {
               "application/json": {
                 "schema": {
@@ -76,20 +64,27 @@
             }
           },
           "200": {
-            "description": "Race updated."
+            "description": "User created.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
           }
         }
       }
     },
-    "/races/{raceId}": {
+    "/users/{userId}": {
       "get": {
         "tags": [
-          "Race"
+          "Users"
         ],
-        "operationId": "Race_GetRace",
+        "operationId": "Users_GetUser",
         "parameters": [
           {
-            "name": "raceId",
+            "name": "userId",
             "in": "path",
             "required": true,
             "schema": {
@@ -100,7 +95,7 @@
         ],
         "responses": {
           "401": {
-            "description": "Not authorized to retrieve race.",
+            "description": "Not authorized to retrieve user.",
             "content": {
               "application/json": {
                 "schema": {
@@ -110,27 +105,25 @@
             }
           },
           "200": {
-            "description": "Race.",
+            "description": "User details.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Race"
+                  "$ref": "#/components/schemas/User"
                 }
               }
             }
           }
         }
-      }
-    },
-    "/races/{raceId}/startlist": {
-      "get": {
+      },
+      "put": {
         "tags": [
-          "Race"
+          "Users"
         ],
-        "operationId": "Race_GetRaceStartList",
+        "operationId": "Users_UpdateUser",
         "parameters": [
           {
-            "name": "raceId",
+            "name": "userId",
             "in": "path",
             "required": true,
             "schema": {
@@ -139,9 +132,21 @@
             "x-position": 1
           }
         ],
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateUserRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
         "responses": {
           "401": {
-            "description": "Not authorized to retrieve race.",
+            "description": "Not authorized to update a user.",
             "content": {
               "application/json": {
                 "schema": {
@@ -151,11 +156,11 @@
             }
           },
           "200": {
-            "description": "Race.",
+            "description": "User updated.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/StartListResponse"
+                  "$ref": "#/components/schemas/User"
                 }
               }
             }
@@ -163,66 +168,15 @@
         }
       }
     },
-    "/races/pcs/{query}/{year}": {
-      "get": {
+    "/users/{userId}/password/wcs": {
+      "put": {
         "tags": [
-          "Race"
+          "Users"
         ],
-        "operationId": "Race_QueryPcsRaceId",
+        "operationId": "Users_SetWcsPassword",
         "parameters": [
           {
-            "name": "query",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "x-position": 1
-          },
-          {
-            "name": "year",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            },
-            "x-position": 2
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Not authorized to retrieve races.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "Available races.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RaceQueryResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/race/predict/{raceId}/duration": {
-      "get": {
-        "tags": [
-          "RacePrediction"
-        ],
-        "operationId": "RacePrediction_GetDuration",
-        "parameters": [
-          {
-            "name": "raceId",
+            "name": "userId",
             "in": "path",
             "required": true,
             "schema": {
@@ -231,9 +185,21 @@
             "x-position": 1
           }
         ],
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdatePasswordRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
         "responses": {
           "401": {
-            "description": "Not authorized to predict race.",
+            "description": "Not authorized to set the password of a user.",
             "content": {
               "application/json": {
                 "schema": {
@@ -243,14 +209,7 @@
             }
           },
           "200": {
-            "description": "Race list.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RaceDurationPredictionResponse"
-                }
-              }
-            }
+            "description": "Password updated."
           }
         }
       }
@@ -287,7 +246,7 @@
           }
         }
       },
-      "RaceListResponse": {
+      "UserListResponse": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
@@ -295,295 +254,101 @@
             "type": "integer",
             "format": "int64"
           },
-          "races": {
+          "users": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Race"
+              "$ref": "#/components/schemas/User"
             }
           }
         }
       },
-      "Race": {
+      "User": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
-          "id": {
+          "userId": {
             "type": "string"
           },
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "date": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "raceType": {
-            "type": "string",
-            "nullable": true
-          },
-          "distance": {
-            "type": "number",
-            "format": "decimal",
-            "nullable": true
-          },
-          "elevation": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "duration": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "status": {
-            "$ref": "#/components/schemas/RaceStatus"
-          },
-          "profileImageUrl": {
-            "type": "string",
-            "nullable": true
-          },
-          "pointsScale": {
-            "type": "string",
-            "nullable": true
-          },
-          "uciScale": {
-            "type": "string",
-            "nullable": true
-          },
-          "parcoursType": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "profileScore": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "raceRanking": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "startlistQuality": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "decidingMethod": {
-            "type": "string",
-            "nullable": true
-          },
-          "classification": {
-            "type": "string",
-            "nullable": true
-          },
-          "year": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "category": {
-            "type": "string",
-            "nullable": true
-          },
-          "stageRace": {
-            "type": "boolean",
-            "nullable": true
-          },
-          "mainRaceId": {
+          "email": {
             "type": "string"
           },
-          "detailsAvailable": {
-            "type": "boolean"
-          },
-          "pcsId": {
+          "phoneNumber": {
             "type": "string",
             "nullable": true
           },
-          "pcsUrl": {
+          "wcsUserName": {
             "type": "string",
             "nullable": true
           },
-          "wcsUrl": {
+          "language": {
             "type": "string",
             "nullable": true
           },
-          "pointsRetrieved": {
-            "type": "boolean"
-          },
-          "gameOrganized": {
-            "type": "boolean",
-            "nullable": true
-          },
-          "resultsRetrieved": {
-            "type": "boolean"
-          },
-          "startListRetrieved": {
-            "type": "boolean"
-          },
-          "detailsCompleted": {
-            "type": "boolean"
-          },
-          "stageRaceId": {
+          "authenticationProviderId": {
             "type": "string",
             "nullable": true
-          },
-          "stages": {
-            "type": "array",
-            "nullable": true,
-            "items": {
-              "$ref": "#/components/schemas/Race"
-            }
           }
         }
       },
-      "RaceStatus": {
-        "type": "integer",
-        "description": "",
-        "x-enumNames": [
-          "New",
-          "Planned",
-          "Finished",
-          "Canceled",
-          "NotFound",
-          "Error"
-        ],
-        "enum": [
-          0,
-          1,
-          3,
-          4,
-          -4,
-          -1
-        ]
-      },
-      "StartListResponse": {
+      "CreateUserRequest": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
-          "riderCount": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "starBudget": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "riders": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RiderRaceInfo"
-            }
-          }
-        }
-      },
-      "RiderRaceInfo": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "rider": {
-            "$ref": "#/components/schemas/RiderSummary"
-          },
-          "stars": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "youthRider": {
-            "type": "boolean"
-          }
-        }
-      },
-      "RiderSummary": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "riderId": {
+          "userId": {
             "type": "string"
           },
-          "teamId": {
-            "type": "string"
-          }
-        }
-      },
-      "RaceQueryResponse": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "count": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "results": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "string"
-            }
-          }
-        }
-      },
-      "RaceUpdateRequest": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "raceId": {
+          "email": {
             "type": "string"
           },
-          "pcsId": {
+          "phoneNumber": {
             "type": "string",
             "nullable": true
           },
-          "status": {
-            "nullable": true,
-            "oneOf": [
-              {
-                "$ref": "#/components/schemas/RaceStatus"
-              }
-            ]
+          "wcsUserName": {
+            "type": "string",
+            "nullable": true
+          },
+          "language": {
+            "type": "string",
+            "nullable": true
+          },
+          "authenticationId": {
+            "type": "string",
+            "nullable": true
           }
         }
       },
-      "RaceDurationPredictionResponse": {
+      "UpdateUserRequest": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
-          "count": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "totalDuration": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "predictions": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RaceDurationResult"
-            }
-          }
-        }
-      },
-      "RaceDurationResult": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "raceId": {
+          "email": {
             "type": "string"
           },
-          "durationSeconds": {
-            "type": "integer",
-            "format": "int32"
+          "phoneNumber": {
+            "type": "string",
+            "nullable": true
           },
-          "distance": {
-            "type": "integer",
-            "format": "int32"
+          "wcsUserName": {
+            "type": "string",
+            "nullable": true
           },
-          "averageSpeedKh": {
-            "type": "number",
-            "format": "decimal"
+          "language": {
+            "type": "string",
+            "nullable": true
+          },
+          "authenticationId": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "UpdatePasswordRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "encryptedPassword": {
+            "type": "string"
           }
         }
       }
