# src/Aerobets.WebAPI/ServiceContracts/Requests/UpdatePasswordRequest.cs
@@ -1,0 +1,6 @@
+namespace Aerobets.WebAPI.ServiceContracts.Requests;
+
+public class UpdatePasswordRequest
+{
+    public string EncryptedPassword { get; set; }
+}
